.fleet-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-filament
  namespace: testing-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-filament
  template:
    metadata:
      labels:
        app: laravel-filament
    spec:
      containers:
      - name: laravel-filament
        image: darrellcr:laravel-filament:1.0
        ports:
        - containerPort: 80
      #   volumeMounts:
      #   - name: nginx-config-volume
      #     mountPath: /etc/nginx/nginx.conf
      #     subPath: nginx.conf
      # volumes:
      # - name: nginx-config-volume
      #   configMap:
      #     name: nginx
